Fix some layout issues on iOS devices

--- a/index.css
+++ b/index.css
@@ -79,7 +79,7 @@ a:hover {
   background-position: left center;
   position: relative;
 }
-@media (min-width: 720px) {
+@media (min-width: 1025px) {
   .hero {
     background-attachment: fixed;
   }
@@ -96,6 +96,12 @@ a:hover {
 }
 .hero h1.brand {
   font-size: 3rem;
+  margin: 0 10%;
+}
+@media(min-width: 500px) {
+  .hero h1.brand {
+    font-size: 5rem;
+  }
 }
 h1.brand small {
   font-size: 55%;
@@ -104,7 +110,7 @@ h1.brand small {
 .hero h1.brand small {
   font-size: 40%;
 }
-@media (min-width: 720px) {
+@media (min-width: 770px) {
   .hero h1.brand {
     font-size: 20vh;
     line-height: 24vh;
@@ -290,6 +296,7 @@ img {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: space-around;
   justify-content: space-around;
   margin-top: 4rem;
   -webkit-flex-flow: row wrap;
